# Margaret

./: .dockerignore  Dockerfile  docker-compose.yml
.github/workflows/: python-app.yml
margaret_back/: .gitignore  app.py  pyproject.toml  requirements.txt
margaret_back/__tests__/: test_project.py  test_project_controller.py  test_subscribed.py
margaret_back/__tests__/funcional/: conftest.py  test_mentor.py  test_project.py  test_subscribed.py
margaret_back/__tests__/unit/: test_user.py
margaret_back/controllers/: mentor_controller.py  organization_controller.py  project_controller.py  subscribeds_controller.py
margaret_back/ext/api/: api.py  organization.py  testext.py
margaret_back/ext/api/organization/: organization.py
margaret_back/ext/mentor/: mentor.py
margaret_back/ext/organization/: organization.py
margaret_back/ext/project/: project.py
margaret_back/ext/subscribed/: subscribed.py
margaret_back/models/: mentor.py  organization.py  project.py  subscribed.py  user.py
margaret_back/tests/: test_project.py  test_project_controller.py  test_subscribed.py  test_user.py
margaret_back/util/: validation.py
python/: app.py  requirements.txt
python/__tests__/: test_project_controller.py
python/__tests__/functional/: conftest.py  test_subscribed.py
python/controllers/: project_controller.py  subscribeds_controller.py
python/ext/mentor/: mentor.py
python/ext/subscribed/: subscribed.py
python/models/: mentor.py  project.py  subscribed.py  user.py
python/tests/: conftest.py  test_app.py
python/util/: environment.py
