[tool.poetry]
name = "margaret_back"
version = "0.1.0"
description = ""
authors = ["Juan Barros <juan.barros@ccc.ufcg.edu.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
flask-restx = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest-flask = "^1.1.0"
flake8 = "^3.8.4"
autopep8 = "^1.5.5"
poethepoet = "^0.9.0"

[tool.poe.tasks]
requirements = "poetry export -f requirements.txt --dev --output requirements.txt"
lint = "autopep8 . --recursive --in-place --pep8-passes 2000 --verbose"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
